--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Zeina Roz # Peg Blaine (or website title) here
+title: Peg Blaine # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Analysis 
