--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Peg Blaine # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Analysis 
-  Project Portfolio  <br><br>
+  Data Analysis Project Portfolio  
   <a href="https://www.linkedin.com/in/pegblaine/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
